src/quick/scenegraph/qsgrenderloop.cpp
@@ -329,7 +329,7 @@ void QSGGuiThreadRenderLoop::windowDestroyed(QQuickWindow *window)
     d->cleanupNodesOnShutdown();
 
 #if QT_CONFIG(quick_shadereffect)
-    QSGRhiShaderEffectNode::cleanupMaterialTypeCache();
+    QSGRhiShaderEffectNode::cleanupMaterialTypeCache(window);
 #endif
 
     if (m_windows.size() == 0) {
